Chapter08/ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: sixtyfive.me
      http:
        paths:
          - path: /echo-hostname
            backend:
              serviceName: hostname-service
              servicePort: 80
